o Removed use of Float.valueOf() to be compatible with Java 1.3.
git-svn-id: http://svn.code.sf.net/p/jtds/code/branches/jTDS_1_2_2_JDBC3/jtds@1083 97a8069c-bbaa-4fa2-9e49-561d8e0b19ef